css html connect

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -5,9 +5,12 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </head>
+
 <body>
-    <!-- Your content here -->
-    <p>Hello World</p>
-    <!-- Your content here -->
+    <main>
+        <div class="GameContainer">
+            <p>Wordle GameContainer</p>
+        </div>
+    </main>
 </body>
 </html>
