--- a/Templates/index.html
+++ b/Templates/index.html
@@ -10,6 +10,113 @@
     <main>
         <div class="GameContainer">
             <p>Wordle GameContainer</p>
+
+            <div class="RowContainer" aria-label="row 1">
+                <div class="TileContainer" aria-label="tile 1">
+                    <p>tile 1</p>
+                </div>
+                <div class="TileContainer" aria-label="tile 2">
+                    <p>tile 2</p>
+                </div>
+                <div class="TileContainer" aria-label="tile 3">
+                    <p>tile 3</p>
+                </div>
+                <div class="TileContainer" aria-label="tile 4">
+                    <p>tile 4</p>
+                </div>
+                <div class="TileContainer" aria-label="tile 5">
+                    <p>tile 5</p>
+                </div>
+            </div>
+
+            <div class="RowContainer" aria-label="row 2">
+                <div class="TileContainer" aria-label="tile 1">
+                    <p>tile 1</p>
+                </div>
+                <div class="TileContainer" aria-label="tile 2">
+                    <p>tile 2</p>
+                </div>
+                <div class="TileContainer" aria-label="tile 3">
+                    <p>tile 3</p>
+                </div>
+                <div class="TileContainer" aria-label="tile 4">
+                    <p>tile 4</p>
+                </div>
+                <div class="TileContainer" aria-label="tile 5">
+                    <p>tile 5</p>
+                </div>
+            </div>
+
+            <div class="RowContainer" aria-label="row 3">
+                <div class="TileContainer" aria-label="tile 1">
+                    <p>tile 1</p>
+                </div>
+                <div class="TileContainer" aria-label="tile 2">
+                    <p>tile 2</p>
+                </div>
+                <div class="TileContainer" aria-label="tile 3">
+                    <p>tile 3</p>
+                </div>
+                <div class="TileContainer" aria-label="tile 4">
+                    <p>tile 4</p>
+                </div>
+                <div class="TileContainer" aria-label="tile 5">
+                    <p>tile 5</p>
+                </div>
+            </div>
+            <div class="RowContainer" aria-label="row 4">
+                <div class="TileContainer" aria-label="tile 1">
+                    <p>tile 1</p>
+                </div>
+                <div class="TileContainer" aria-label="tile 2">
+                    <p>tile 2</p>
+                </div>
+                <div class="TileContainer" aria-label="tile 3">
+                    <p>tile 3</p>
+                </div>
+                <div class="TileContainer" aria-label="tile 4">
+                    <p>tile 4</p>
+                </div>
+                <div class="TileContainer" aria-label="tile 5">
+                    <p>tile 5</p>
+                </div>
+            </div>
+
+            <div class="RowContainer" aria-label="row 5">
+                <div class="TileContainer" aria-label="tile 1">
+                    <p>tile 1</p>
+                </div>
+                <div class="TileContainer" aria-label="tile 2">
+                    <p>tile 2</p>
+                </div>
+                <div class="TileContainer" aria-label="tile 3">
+                    <p>tile 3</p>
+                </div>
+                <div class="TileContainer" aria-label="tile 4">
+                    <p>tile 4</p>
+                </div>
+                <div class="TileContainer" aria-label="tile 5">
+                    <p>tile 5</p>
+                </div>
+            </div>
+
+            <div class="RowContainer" aria-label="row 6">
+                <div class="TileContainer" aria-label="tile 1">
+                    <p>tile 1</p>
+                </div>
+                <div class="TileContainer" aria-label="tile 2">
+                    <p>tile 2</p>
+                </div>
+                <div class="TileContainer" aria-label="tile 3">
+                    <p>tile 3</p>
+                </div>
+                <div class="TileContainer" aria-label="tile 4">
+                    <p>tile 4</p>
+                </div>
+                <div class="TileContainer" aria-label="tile 5">
+                    <p>tile 5</p>
+                </div>
+            </div>
         </div>
     </main>
 </body>
