--- a/Templates/index.html
+++ b/Templates/index.html
@@ -6,6 +6,11 @@
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </head>
 
+<form style="display:none">
+    <input type="text" id="prevent_autofill" autocomplete="username" />
+    <input type="password" id="prevent_autofill" autocomplete="new-password" />
+</form>
+
 <body>
     <main>
         <div class="GameContainer">
@@ -13,110 +18,112 @@
 
             <div class="RowContainer" aria-label="row 1">
                 <div class="TileContainer" aria-label="tile 1">
-                    <p>tile 1</p>
+                    <input type="tel" maxlength="1" aria-label="letter 1" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 2">
-                    <p>tile 2</p>
+                    <input type="tel" maxlength="1" aria-label="letter 2" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 3">
-                    <p>tile 3</p>
+                    <input type="tel" maxlength="1" aria-label="letter 3" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 4">
-                    <p>tile 4</p>
+                    <input type="tel" maxlength="1" aria-label="letter 4" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 5">
-                    <p>tile 5</p>
+                    <input type="tel" maxlength="1" aria-label="letter 5" autocomplete="off">
                 </div>
             </div>
 
             <div class="RowContainer" aria-label="row 2">
                 <div class="TileContainer" aria-label="tile 1">
-                    <p>tile 1</p>
+                    <input type="tel" maxlength="1" aria-label="letter 1" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 2">
-                    <p>tile 2</p>
+                    <input type="tel" maxlength="1" aria-label="letter 2" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 3">
-                    <p>tile 3</p>
+                    <input type="tel" maxlength="1" aria-label="letter 3" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 4">
-                    <p>tile 4</p>
+                    <input type="tel" maxlength="1" aria-label="letter 4" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 5">
-                    <p>tile 5</p>
+                    <input type="tel" maxlength="1" aria-label="letter 5" autocomplete="off">
                 </div>
             </div>
 
             <div class="RowContainer" aria-label="row 3">
                 <div class="TileContainer" aria-label="tile 1">
-                    <p>tile 1</p>
+                    <input type="tel" maxlength="1" aria-label="letter 1" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 2">
-                    <p>tile 2</p>
+                    <input type="tel" maxlength="1" aria-label="letter 2" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 3">
-                    <p>tile 3</p>
+                    <input type="tel" maxlength="1" aria-label="letter 3" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 4">
-                    <p>tile 4</p>
+                    <input type="tel" maxlength="1" aria-label="letter 4" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 5">
-                    <p>tile 5</p>
+                    <input type="tel" maxlength="1" aria-label="letter 5" autocomplete="off">
                 </div>
             </div>
+
             <div class="RowContainer" aria-label="row 4">
                 <div class="TileContainer" aria-label="tile 1">
-                    <p>tile 1</p>
+                    <input type="tel" maxlength="1" aria-label="letter 1" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 2">
-                    <p>tile 2</p>
+                    <input type="tel" maxlength="1" aria-label="letter 2" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 3">
-                    <p>tile 3</p>
+                    <input type="tel" maxlength="1" aria-label="letter 3" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 4">
-                    <p>tile 4</p>
+                    <input type="tel" maxlength="1" aria-label="letter 4" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 5">
-                    <p>tile 5</p>
+                    <input type="tel" maxlength="1" aria-label="letter 5" autocomplete="off">
                 </div>
             </div>
 
             <div class="RowContainer" aria-label="row 5">
                 <div class="TileContainer" aria-label="tile 1">
-                    <p>tile 1</p>
+                    <input type="tel" maxlength="1" aria-label="letter 1" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 2">
-                    <p>tile 2</p>
+                    <input type="tel" maxlength="1" aria-label="letter 2" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 3">
-                    <p>tile 3</p>
+                    <input type="tel" maxlength="1" aria-label="letter 3" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 4">
-                    <p>tile 4</p>
+                    <input type="tel" maxlength="1" aria-label="letter 4" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 5">
-                    <p>tile 5</p>
+                    <input type="tel" maxlength="1" aria-label="letter 5" autocomplete="off">
                 </div>
             </div>
 
             <div class="RowContainer" aria-label="row 6">
                 <div class="TileContainer" aria-label="tile 1">
-                    <p>tile 1</p>
+                    <input type="tel" maxlength="1" aria-label="letter 1" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 2">
-                    <p>tile 2</p>
+                    <input type="tel" maxlength="1" aria-label="letter 2" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 3">
-                    <p>tile 3</p>
+                    <input type="tel" maxlength="1" aria-label="letter 3" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 4">
-                    <p>tile 4</p>
+                    <input type="tel" maxlength="1" aria-label="letter 4" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 5">
-                    <p>tile 5</p>
+                    <input type="tel" maxlength="1" aria-label="letter 5" autocomplete="off">
                 </div>
             </div>
+            
         </div>
     </main>
 </body>
