--- a/Templates/index.html
+++ b/Templates/index.html
@@ -18,112 +18,112 @@
 
             <div class="RowContainer" aria-label="row 1">
                 <div class="TileContainer" aria-label="tile 1">
-                    <input type="tel" maxlength="1" aria-label="letter 1" autocomplete="off">
+                    <input type="text" maxlength="1" aria-label="letter 1" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 2">
-                    <input type="tel" maxlength="1" aria-label="letter 2" autocomplete="off">
+                    <input type="text" maxlength="1" aria-label="letter 2" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 3">
-                    <input type="tel" maxlength="1" aria-label="letter 3" autocomplete="off">
+                    <input type="text" maxlength="1" aria-label="letter 3" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 4">
-                    <input type="tel" maxlength="1" aria-label="letter 4" autocomplete="off">
+                    <input type="text" maxlength="1" aria-label="letter 4" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 5">
-                    <input type="tel" maxlength="1" aria-label="letter 5" autocomplete="off">
+                    <input type="text" maxlength="1" aria-label="letter 5" autocomplete="off">
                 </div>
             </div>
 
             <div class="RowContainer" aria-label="row 2">
                 <div class="TileContainer" aria-label="tile 1">
-                    <input type="tel" maxlength="1" aria-label="letter 1" autocomplete="off">
+                    <input type="text" maxlength="1" aria-label="letter 1" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 2">
-                    <input type="tel" maxlength="1" aria-label="letter 2" autocomplete="off">
+                    <input type="text" maxlength="1" aria-label="letter 2" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 3">
-                    <input type="tel" maxlength="1" aria-label="letter 3" autocomplete="off">
+                    <input type="text" maxlength="1" aria-label="letter 3" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 4">
-                    <input type="tel" maxlength="1" aria-label="letter 4" autocomplete="off">
+                    <input type="text" maxlength="1" aria-label="letter 4" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 5">
-                    <input type="tel" maxlength="1" aria-label="letter 5" autocomplete="off">
+                    <input type="text" maxlength="1" aria-label="letter 5" autocomplete="off">
                 </div>
             </div>
 
             <div class="RowContainer" aria-label="row 3">
                 <div class="TileContainer" aria-label="tile 1">
-                    <input type="tel" maxlength="1" aria-label="letter 1" autocomplete="off">
+                    <input type="text" maxlength="1" aria-label="letter 1" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 2">
-                    <input type="tel" maxlength="1" aria-label="letter 2" autocomplete="off">
+                    <input type="text" maxlength="1" aria-label="letter 2" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 3">
-                    <input type="tel" maxlength="1" aria-label="letter 3" autocomplete="off">
+                    <input type="text" maxlength="1" aria-label="letter 3" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 4">
-                    <input type="tel" maxlength="1" aria-label="letter 4" autocomplete="off">
+                    <input type="text" maxlength="1" aria-label="letter 4" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 5">
-                    <input type="tel" maxlength="1" aria-label="letter 5" autocomplete="off">
+                    <input type="text" maxlength="1" aria-label="letter 5" autocomplete="off">
                 </div>
             </div>
 
             <div class="RowContainer" aria-label="row 4">
                 <div class="TileContainer" aria-label="tile 1">
-                    <input type="tel" maxlength="1" aria-label="letter 1" autocomplete="off">
+                    <input type="text" maxlength="1" aria-label="letter 1" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 2">
-                    <input type="tel" maxlength="1" aria-label="letter 2" autocomplete="off">
+                    <input type="text" maxlength="1" aria-label="letter 2" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 3">
-                    <input type="tel" maxlength="1" aria-label="letter 3" autocomplete="off">
+                    <input type="text" maxlength="1" aria-label="letter 3" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 4">
-                    <input type="tel" maxlength="1" aria-label="letter 4" autocomplete="off">
+                    <input type="text" maxlength="1" aria-label="letter 4" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 5">
-                    <input type="tel" maxlength="1" aria-label="letter 5" autocomplete="off">
+                    <input type="text" maxlength="1" aria-label="letter 5" autocomplete="off">
                 </div>
             </div>
 
             <div class="RowContainer" aria-label="row 5">
                 <div class="TileContainer" aria-label="tile 1">
-                    <input type="tel" maxlength="1" aria-label="letter 1" autocomplete="off">
+                    <input type="text" maxlength="1" aria-label="letter 1" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 2">
-                    <input type="tel" maxlength="1" aria-label="letter 2" autocomplete="off">
+                    <input type="text" maxlength="1" aria-label="letter 2" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 3">
-                    <input type="tel" maxlength="1" aria-label="letter 3" autocomplete="off">
+                    <input type="text" maxlength="1" aria-label="letter 3" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 4">
-                    <input type="tel" maxlength="1" aria-label="letter 4" autocomplete="off">
+                    <input type="text" maxlength="1" aria-label="letter 4" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 5">
-                    <input type="tel" maxlength="1" aria-label="letter 5" autocomplete="off">
+                    <input type="text" maxlength="1" aria-label="letter 5" autocomplete="off">
                 </div>
             </div>
 
             <div class="RowContainer" aria-label="row 6">
                 <div class="TileContainer" aria-label="tile 1">
-                    <input type="tel" maxlength="1" aria-label="letter 1" autocomplete="off">
+                    <input type="text" maxlength="1" aria-label="letter 1" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 2">
-                    <input type="tel" maxlength="1" aria-label="letter 2" autocomplete="off">
+                    <input type="text" maxlength="1" aria-label="letter 2" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 3">
-                    <input type="tel" maxlength="1" aria-label="letter 3" autocomplete="off">
+                    <input type="text" maxlength="1" aria-label="letter 3" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 4">
-                    <input type="tel" maxlength="1" aria-label="letter 4" autocomplete="off">
+                    <input type="text" maxlength="1" aria-label="letter 4" autocomplete="off">
                 </div>
                 <div class="TileContainer" aria-label="tile 5">
-                    <input type="tel" maxlength="1" aria-label="letter 5" autocomplete="off">
+                    <input type="text" maxlength="1" aria-label="letter 5" autocomplete="off">
                 </div>
             </div>
-            
+
         </div>
     </main>
 </body>
