--- a/Static/css/style.css
+++ b/Static/css/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 .GameContainer {
-    background-color: rgb(43, 43, 43);
+    background-color: rgb(24, 24, 24);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -20,7 +20,7 @@ body {
     background-color: rgb(126, 126, 126);
     display: flex;
     width: 100%; 
-    margin-bottom: 10px; 
+    margin-bottom: 5px; 
 }
 
 .TileContainer {
@@ -32,10 +32,13 @@ body {
 }
 
 .TileContainer input {
-    font-size: 30px;
-    background-color: rgb(163, 163, 163);
+    font-size: 5vh;
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    background-color: rgb(69, 69, 69);
     text-align: center;
     text-transform: uppercase;
     max-width: none; 
     max-height: none; 
+     margin: 5px;
 }
