--- a/Static/css/style.css
+++ b/Static/css/style.css
@@ -3,17 +3,23 @@ body {
     color: rgb(255, 255, 255);
 }
 
+h1 {
+    font-size: 2vw;
+    text-align: center;
+}
+
 .GameContainer {
     background-color: rgb(24, 24, 24);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 75vh; 
     width: 20%;
+    height: 20%;
     min-width: 200px;
-    min-height: 400px;
+    min-height: 10px;
     margin: 0 auto;
+
 }
 
 .RowContainer {
@@ -35,10 +41,13 @@ body {
     font-size: 5vh;
     color: rgb(255, 255, 255);
     font-weight: bold;
-    background-color: rgb(69, 69, 69);
+    background-color: rgb(39, 39, 39);
     text-align: center;
     text-transform: uppercase;
     max-width: none; 
     max-height: none; 
-     margin: 5px;
+    margin: 5px;
+    border: none; 
+    outline: none; 
+    box-shadow: none;
 }
