--- a/Templates/index.html
+++ b/Templates/index.html
@@ -13,14 +13,12 @@
 
 <body>
     <main>
-        <div class="GameContainer">
-            <h1>Wordle</h1>
+        <div class="TopContainer"> 
+            <div class="GameContainer">
+                <h1>Wordle</h1>
+            </div>
+            <script src="{{ url_for('static', filename='js/GameContainer.js') }}"></script>
         </div>
-        <script src="{{ url_for('static', filename='js/GameContainer.js') }}"></script>
-
-        <div class="KeyboardContainer">
-        </div>
-        <script src="{{ url_for('static', filename='js/KeyboardContainer.js') }}"></script>
     </main>
 </body>
 </html>
