--- a/Static/css/style.css
+++ b/Static/css/style.css
@@ -89,6 +89,11 @@ h1 {
     margin-bottom: 1px;
 }
 
+
+.KeyboardContainer .backspace {
+    font-size: 0.8em; /* Adjust this value to your liking */
+}
+
 .KeyboardContainer button:hover {
     background-color: rgb(39, 39, 39);
 }
