--- a/Templates/index.html
+++ b/Templates/index.html
@@ -16,6 +16,7 @@
         <div class="TopContainer"> 
             <div class="GameContainer">
                 <h1>Wordle</h1>
+                <button tabindex="-1" id="resetButton">Reset</button>
                 <div id="toast" class="toast">This is a toast message.</div>
             </div>
             <script src="{{ url_for('static', filename='js/GameContainer.js') }}"></script>
