--- a/Static/css/style.css
+++ b/Static/css/style.css
@@ -16,6 +16,12 @@ h1 {
     align-items: center;
 }
 
+#resetButton{
+    font-size: 2vh;
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    background-color: rgb(97, 97, 97);
+}
 
 .GameContainer {
     background-color: rgb(24, 24, 24, 0);
