--- a/Static/css/style.css
+++ b/Static/css/style.css
@@ -9,7 +9,7 @@ h1 {
 }
 
 .TopContainer {
-    background-color: rgb(122, 122, 122, 0);
+    background-color: rgba(122, 122, 122, 0);
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -24,7 +24,7 @@ h1 {
 }
 
 .GameContainer {
-    background-color: rgb(24, 24, 24, 0);
+    background-color: rgba(24, 24, 24, 0);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -195,9 +195,5 @@ h1 {
     width: 200px;
     overflow: auto;
     padding: 10px;
-    background-color: rgb(122, 122, 122, 0);
-}
-
-body {
-    margin-left: 0px;  
+    background-color: rgba(122, 122, 122, 0);
 }
