login / register styling

--- a/Templates/register.html
+++ b/Templates/register.html
@@ -1,4 +1,5 @@
 <!-- register.html -->
+<h2>Registration</h2>
 <form method="POST" action="{{ url_for('register') }}">
     {{ form.hidden_tag() }}
     {% if error %}
