--- a/Static/css/style.css
+++ b/Static/css/style.css
@@ -8,6 +8,12 @@ h1 {
     text-align: center;
 }
 
+h2 {
+    font-size: 2vw;
+    text-align: center;
+    color: black;
+}
+
 .TopContainer {
     background-color: rgba(122, 122, 122, 0);
     display: flex;
@@ -175,7 +181,12 @@ h1 {
     padding: 20px;
     border: 1px solid #888;
     width: 20%; 
+    min-width: 250px;
     border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 #username-display {
