--- a/Templates/login.html
+++ b/Templates/login.html
@@ -1,4 +1,5 @@
 <!-- login.html -->
+<h2>Login</h2>
 <form method="POST" action="{{ url_for('login') }}">
     {{ form.hidden_tag() }}
     {% if error %}
